# jra-tools

./: Dockerfile  LICENSE  README.md  bao_importer.py  category_data.py  db_checker.py  input_creator.py  kaisai_creator.py  label_creator.py  labelutil.py  model_creator.py  performance_tester.py  pred_race_updater.py  pyproject.toml  raceinfo_returninfo_check.sql  schedule.py  setup.cfg  training_tool.py  trainning_visualizer.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
jra_tools/: README.md  __init__.py  bao_importer.py  kaisai_creator.py  performance_tester.py  setup.cfg
jra_tools/.devcontainer/: devcontainer.json
jra_tools/src/jra_tools/: __init__.py
jra_tools/src/jra_tools/database/: bao_importer.py  pred_race_updater.py  predict_race_factory.py  schedule.py
jra_tools/src/jra_tools/machine_learning/: category_data.py  input_creator.py  kaisai_creator.py  kaisai_loader.py  label_creator.py  training_tool.py
jra_tools/tests/: test_integration_schedule.py  test_kaisai_loader.py  test_schedule.py
src/jra_tools/: __init__.py  model_creator.py  pred_race_updater.py
src/jra_tools/database/: bao_importer.py  db_checker.py  pred_race_updater.py  predict_factory.py  schedule.py
src/jra_tools/machine_learning/: category_data.py  converter.py  dataset_creator.py  input_creator.py  jrdbdummies.py  kaisai_loader.py  model_creator.py  payout_creator.py  performance_tester.py  quarter_kaisai_query.py  target_dataset_creator.py  training_kaisai_query.py  training_tool.py  util.py
src/jra_tools/machine_learning/entity/: jrdbdummies.py
src/jra_tools/machine_learning/infrastructure/: kaisai_creator.py  mysql_loader.py
src/jra_tools/machine_learning/interface_adapter/: iioloader.py  input_creator.py  ispecified_loader.py  kaisai_loader.py  label_creator.py  quarter_kaisai_query.py  training_kaisai_query.py
src/jra_tools/machine_learning/usecase/: category_data.py  converter.py  icreator.py  input_creator.py  iquery.py  payout_creator.py  training_tool.py  util.py
tests/: conftest.py  sample_kaisais.pkl  test_converter.py  test_dataset_creator.py  test_input_creator.py  test_integration_schedule.py  test_payout_creator.py  test_quarter_kaisai_query.py  test_schedule.py  test_training_kaisai_query.py  test_util.py
tests/database/: test_integration_schedule.py  test_predict_factory.py  test_schedule.py  yahoo_keiba.pkl
tests/database/ResNet_4blocks_20130101_20191231/: fingerprint.pb  keras_metadata.pb  saved_model.pb
tests/database/ResNet_4blocks_20130101_20191231/variables/: variables.data-00000-of-00001  variables.index
tests/machine_learning/: test_input_creator.py
tests/machine_learning/infrastructure/: test_mysql_loader.py
tests/machine_learning/interface_adapter/: mock_specified_loader.py  test_label_creator.py  test_payout_creator.py  test_quarter_kaisai_query.py  test_training_kaisai_query.py
tests/machine_learning/usecase/: test_category_data.py  test_converter.py  test_training_tool.py
