[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jra-tools"
version = "0.0.14"
authors = [{name = "Requrd", email = "requrd1989@gmail.com"}]
description = "Data Analisys Tools for JRDB"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "jrdb-model >= 0.1.0",
    "beautifulsoup4 >=4.11.1",
    "scikit-learn >=1.1.1",
    "lxml >= 4.9.0",
    "requests >=2.31.0",
    "aiohttp >=3.8.5",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/astroripple/jra-tools"
"Bug Tracker" = "https://github.com/astroripple/jra-tools/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
