[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jra-tools"
version = "0.0.16"
authors = [{ name = "Requrd", email = "requrd1989@gmail.com" }]
description = "Data Analisys Tools for JRDB"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "jrdb-model >= 0.2.3",
    "beautifulsoup4 >=4.11.1",
    "scikit-learn >=1.6.1",
    "numpy >1.24.4",
    "lxml >= 4.9.0",
    "requests >=2.31.0",
    "aiohttp >=3.8.5",
    "tensorflow>=2.18.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/astroripple/jra-tools"
"Bug Tracker" = "https://github.com/astroripple/jra-tools/issues"

[tool.setuptools]
license-files = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["RUF", "I", "SIM", "FURB", "PIE", "PERF", "C4", "B", "PL", "D", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
docstring-code-format = true


[dependency-groups]
dev = [
    "aioresponses>=0.7.6",
    "mypy>=1.13.0",
    "pymysql>=1.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.9.5",
    "types-tensorflow>=2.18.0.20241227",
]
