[metadata]
name = jra-tools-REQURD
version = 0.0.1
author = Requrd
author_email = requrd1989@gmail.com
description = Data Analisys Tools for JRDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astroripple/jra-tools
project_urls =
    Bug Tracker = https://github.com/astroripple/jra-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src